Fix weird scrollbar in firefox

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ code {
 }
 pre > code {
   width: 100%;
+  overflow-y: hidden;
 }
 
 table td {
